Changelog
=========

4.8.1 (unreleased)
------------------

- Fixed effective date in metadata box. #HELP-3874



4.8.0 (2021-10-20)
------------------

- Removed commenting button. #HELP-2761
- List review authors separately, not in the same entry with a slash in between. #HELP-2751
- Show more URL/DOI fields in metadata box. #SCR-1217
- "Translated title" fields for additional content types. #SCR-1215
- Exclude "admin."-domains from redirection to canonical URL. #SCR-1428
- GND support. #SCR-1422


4.7.1 (2020-08-12)
------------------

- Metadata box: Tweaked display (recensio-Date, recensio-ID, URN) #HELP-2256 #HELP-2125
- Fixed creating Publications #HELP-2318


4.7.0 (2020-07-20)
------------------

- Review Exhibition: Support for permanent exhibitons. #SCR-340
- Hide empty additional subtitles. #SCR-344
- Metadata box: Leave spaces before and after slash dividing titles/subtitles.
  #SCR-440
- "Show URL in citation rules box" is also available on publications, volumes and issues. #SCR-341 #SCR-393 #SCR-436
- Review view: Show publication date in metadata. #SCR-345 #SCR-402 #SCR-438
- Review view: Tweaked title display for raj and raev #SCR-457


4.6.0 (2019-09-26)
------------------

- Multipart Titles: Show title and subtitle separately in metadata box. #FLOW-559
- Multipart Titles: Removed field from rj type. #FLOW-559
- Zotero Export: Include works author in title field and use review author for
  author field. #FLOW-651
- External Fulltext: Fixed setting on Volume level. #FLOW-741
- OPAC search: Handle PPN. #FLOW-650
- New license field that supports translation (via referencing a Page). #FLOW-443
- Added new review types. #FLOW-649


4.5.0 (2019-06-05)
------------------

- Review view: Provide titles for accordion boxes and contained links so that
  zotero metadata string is not visible. #FLOW-444
- Support for multipart titles. #FLOW-520


4.4.2 (2018-12-12)
------------------

- Don't show "downloaded via" for reviews that use an external full text.